@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.658 2005-04-11 17:02:31 castaglia Exp $
+$Id: NEWS,v 1.659 2005-04-15 21:18:23 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -12,6 +12,7 @@ $Id: NEWS,v 1.658 2005-04-11 17:02:31 castaglia Exp $
 CVS
 --------------------------------
 - Bug 2584 - mod_sql_postgres missing end-of-comment character.
+- Bug 2587 - HideNoAccess does not work for DefaultRoot/<Anonymous> logins.
 
 1.3.0rc1 - Released 10-Apr-2005
 --------------------------------
